--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "json-server": "^0.16.3",
+    "lodash": "^4.17.21",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-feather": "^2.0.9",
@@ -20,10 +21,12 @@
   "devDependencies": {
     "@babel/cli": "^7.12.10",
     "@babel/core": "^7.12.10",
+    "@babel/plugin-transform-runtime": "^7.17.0",
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
     "@babel/preset-typescript": "^7.12.7",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
+    "@types/lodash": "^4.14.178",
     "@types/react-dom": "^17.0.0",
     "babel-loader": "^8.2.2",
     "babel-preset-react-app": "^10.0.0",
@@ -32,10 +35,10 @@
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.1",
     "identity-obj-proxy": "^3.0.0",
-    "node-sass": "^5.0.0",
+    "node-sass": "^7.0.1",
     "react-app-polyfill": "^2.0.0",
     "react-refresh": "^0.9.0",
-    "sass-loader": "^10.1.1",
+    "sass-loader": "^12.4.0",
     "style-loader": "^2.0.0",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3",
